# q2bot

./: .env.dev  .env.prod  .gitignore  Dockerfile  GetFriendList.json  GetPlayerAchievements.json  GetPlayerSummaries.json  GetSchemaForGame.json  GetSupportedAPIList.json  README.md  charm_log.txt  data_test.json  docker-compose.yml  owned_games.json  pyproject.toml  requirements.txt  results.json  run.sh  steam_api.json  test.py  test1.py  鸽子屋.xlsx
.github/workflows/: build.yml
data/play_game/: 鸽子屋.xlsx  鹅子屋.xlsx
src/: __init__.py
src/api/: main.bak  main.py
src/api/core/: __init__.py  config.py
src/api/interface/: api.py
src/api/models/: db.py  users.py
src/plugins/mcsm_api_restart_nonebot/: __init__.py  config.py
src/plugins/nonebot_plugin_cloud_cats/: __init__.py  config.py  云养猫.md
src/plugins/nonebot_plugin_ezi_answersbook/: __init__.py
src/plugins/nonebot_plugin_game_query/: __init__.py  config.py  (+1 more)
static/: index.html
static/assets/: LotteryIndex-0NsXI-RG.js  LotteryIndex-7A9T6IVF.css  LotteryIndex-BB_S6LSL.js  LotteryIndex-BPkZ9y1o.css  LotteryIndex-C55k0EIV.css  LotteryIndex-Csxth_Dy.css  LotteryIndex-D0BWN9yW.js  LotteryIndex-DMbAiWgi.js  LotteryIndex-DVzi00KK.js  LotteryIndex-DcgW9Rhz.css  LotteryResult-BhxCdTcx.js  LotteryResult-BomaO7Ab.js  index-BRscX-nt.js  index-C0WckLG9.css  index-CDdzeMa6.js  index-CRn8lNmH.js  index-CoZSND2Y.js  index-CtRBqTUh.js  index-D427hQCn.css
test_srcipt/: __init__.py  app_box.py  box.py  cat.py  cat_test.py  config.py  heihe.py  zhiyin.py
test_srcipt/xhh/: android.py  calculate.py  checksum.py  hash.py
(+109 files in other folders)
