[project]
name = "q2bot"
version = "0.1.0"
description = "q2bot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
# , "nonebot_plugin_htmlrender"
plugins = ["nonebot_plugin_tortoise_orm","nonebot_plugin_apscheduler"]
plugin_dirs = ["src/plugins","src/api"]
builtin_plugins = []
